@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2020 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -1109,9 +1109,9 @@ class elementDeclBody extends NGCCHandler {
 
       private ElementDecl makeResult() {
         if(finalValue==null)
-          finalValue = new Integer($runtime.finalDefault);
+          finalValue = Integer.valueOf($runtime.finalDefault);
         if(blockValue==null)
-          blockValue = new Integer($runtime.blockDefault);
+          blockValue = Integer.valueOf($runtime.blockDefault);
 
         if(!formSpecified)
           form = $runtime.elementFormDefault;
